<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".home.HomeFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="?textAppearanceHeadline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/singlePlayer"
        android:layout_width="199dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/single_player"
        app:icon="@drawable/ic_single_player"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="@+id/multiPlayer"
        app:layout_constraintStart_toStartOf="@+id/multiPlayer" />

    <Button
        android:id="@+id/multiPlayer"
        android:layout_width="199dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/multi_player"
        app:icon="@drawable/ic_multiplayer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Button
        android:id="@+id/about"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/about"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/playerLevelView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/difficulty_description"
        android:gravity="end"
        android:padding="16dp"
        android:src="@drawable/ic_settings"
        android:tint="?colorSecondary"
        app:layout_constraintBottom_toBottomOf="@+id/singlePlayer"
        app:layout_constraintStart_toEndOf="@+id/singlePlayer"
        app:layout_constraintTop_toTopOf="@+id/singlePlayer" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>